fix z-index number-shop

--- a/src/assets/style/vars.scss
+++ b/src/assets/style/vars.scss
@@ -1,1 +1,2 @@
-$primary-color: #377dff
+$primary-color: #377dff;
+$secondary-bg: #f2f7ff
